@@ -6,10 +6,10 @@ the current version of sudo does not mean it won't work...
 Name	Rev	Arch	Used		Version	By		 Options
 =======	=======	=======	===============	======= ===============  ===============
 Auspex	1.6.1	sun4	bundled cc	1.3.4	Alek Komarnitsky none
-SunOS	4.1.3	sun4	bundled cc	1.6.5	Todd Miller	 none
-SunOS	4.1.3	sun4	gcc2.9.5.2	1.6.5	Todd Miller	 none
+SunOS	4.1.3	sun4	bundled cc	1.6.5p1	Todd Miller	 none
+SunOS	4.1.3	sun4	gcc2.9.5.2	1.6.5p1	Todd Miller	 none
 SunOS	4.1.3	sun4	gcc2.7.2.1	1.5.3	Todd Miller	 --with-kerb4
-SunOS	4.1.3	sun4	gcc2.9.5.2	1.6.5	Todd Miller	 --with-skey
+SunOS	4.1.3	sun4	gcc2.9.5.2	1.6.5p1	Todd Miller	 --with-skey
 Solaris	2.5.1	sparc	SC4.0		1.5.6p1	Brian Jackson	 none 
 Solaris	2.5.1	sun4u	gcc2.7.2.3	1.5.4	Leon von Stauber none
 Solaris	2.5.1	i386	gcc2.7.2	1.5.4	Leon von Stauber none
@@ -22,12 +22,12 @@ Solaris	2.6	i386	unbundled cc	1.5.8p2	Udo Keller	 none
 Solaris	7	i386	gcc 2.8.1	1.6.1	Ido Dubrawsky	 none
 Solaris	7	i386	Workshop 5.0	1.6	Brian Jackson	 none
 Solaris	7	sun4u	egcs 1.1.2	1.5.9p4	Scott Kinnane	 none
-Solaris	7	sparc	SC4.2		1.6.5	Todd Miller	 none
+Solaris	7	sparc	SC4.2		1.6.5p1	Todd Miller	 none
 Solaris	7	sun4u	Workshop 6.2	1.6.3p7	Donna Dickerson	 none
-Solaris	7	sparc	2.95.2		1.6.5	Todd Miller	 --with-skey
+Solaris	7	sparc	2.95.2		1.6.5p1	Todd Miller	 --with-skey
 Solaris	2.6	sun4u	egcs 1.1.2	1.5.9p4	Scott Kinnane	 none
-Solaris	8	sparc	2.95.2		1.6.5	Todd Miller	 --with-skey
-Solaris	8	sparc	SC4.2		1.6.5	Todd Miller	 none
+Solaris	8	sparc	2.95.2		1.6.5p1	Todd Miller	 --with-skey
+Solaris	8	sparc	SC4.2		1.6.5p1	Todd Miller	 none
 Solaris	8	sun4u	Workshop 6.2	1.6.3p7	Donna Dickerson	 none
 ISC	4.0	i386	bundled cc	1.4	Andy Smith	 none
 ISC	4.0	i386	gcc2.7.0	1.4	Andy Smith	 none
@@ -40,9 +40,9 @@ HP-UX	9.05	hp700	gcc2.7.2.1	1.5.3	Todd Miller	 none
 HP-UX	9.05	hp700	gcc2.7.2.1	1.5.3	Todd Miller	 --with-kerb4
 HP-UX	9.07	hp700	unbundled cc	1.5	Alek Komarnitsky --with-C2
 HP-UX	9.05	hp700	unbundled cc	1.4	Todd Miller	 none
-HP-UX	10.10	hp700	unbundled cc	1.6.5	Todd Miller	 --with-skey
-HP-UX	10.20	hp700	gcc2.9.5.2	1.6.5	Todd Miller	 --with-skey
-HP-UX	10.20	hp700	bundled cc	1.6.5	Todd Miller	 none
+HP-UX	10.10	hp700	unbundled cc	1.6.5p1	Todd Miller	 --with-skey
+HP-UX	10.20	hp700	gcc2.9.5.2	1.6.5p1	Todd Miller	 --with-skey
+HP-UX	10.20	hp700	bundled cc	1.6.5p1	Todd Miller	 none
 HP-UX	11.00	hp700	ansi-c		1.5.5b1	Alek Komarnitsky --with-C2
 HP-UX	11.00	hp700	bundled cc	1.5.5p5	Lynn Osburn	 none
 HP-UX	11.00	hp700	HP C compiler	1.6.2	Jeff Earickson 	 --with-pam
@@ -55,8 +55,8 @@ IRIX	5.2	mips	MipsPro C	1.5.6p1	Brian Jackson	 none
 IRIX	5.3	mips	MipsPro C	1.5.6p1	Brian Jackson	 none 
 IRIX	6.2	mips	MipsPro C	1.5.6p1	Brian Jackson	 none 
 IRIX	6.5	mips	MipsPro C	1.5.6p1	Brian Jackson	 none 
-IRIX	5.3	mips	unbundled cc	1.6.5	Todd Miller	 none
-IRIX	5.3	mips	gcc2.9.5.2	1.6.5	Todd Miller	 --with-skey
+IRIX	5.3	mips	unbundled cc	1.6.5p1	Todd Miller	 none
+IRIX	5.3	mips	gcc2.9.5.2	1.6.5p1	Todd Miller	 --with-skey
 IRIX	5.3	mips	gcc2.7.2.1	1.5.3	Todd Miller	 --with-kerb4
 IRIX	5.3	mips	unbundled cc	1.4	Wallace Winfrey	 --with-C2
 IRIX	6.2	mips	unbundled cc	1.5	Alek Komarnitsky --with-C2
@@ -74,11 +74,11 @@ NEXTSTEP 3.2	i386	bundled cc	1.3.2	Jonathan Adams	 none
 NEXTSTEP 3.3	i386	bundled cc	1.4	Jonathan Adams	 none
 NEXTSTEP 3.3	sparc	bundled cc	1.5.3	Mike Kienenberger none
 DEC UNIX 3.2c	alpha	bundled cc	1.5.3	Todd Miller	 none
-DEC UNIX 4.0D	alpha	bundled cc	1.6.5	Todd Miller	 --with-skey
+DEC UNIX 4.0D	alpha	bundled cc	1.6.5p1	Todd Miller	 --with-skey
 DEC UNIX 4.0	alpha	gcc-2.7.2.1	1.5.3	Todd Miller	 --with-kerb4
 DEC UNIX 4.0D	alpha	bundled cc	1.5.3	Randall R. Cable --with-C2
 DEC UNIX 4.0E	alpha	bundled cc	1.5.9p2	Vangelis Haniotakis none
-Tru64	5.1	alpha	bundled cc	1.6.5	Todd Miller	 none
+Tru64	5.1	alpha	bundled cc	1.6.5p1	Todd Miller	 none
 AIX	3.2.X	rs6000	bundled cc	1.4	Todd Miller	 none
 AIX	4.1.3	PowerPC	gcc-2.7.0	1.4	Bob Shair	 none
 AIX	4.1.4	rs6000	gcc-2.8.1	1.6.2p2	Todd Miller	 none
@@ -93,8 +93,8 @@ AIX	4.3.2	rs6000	egcs 1.1.2	1.5.9p4	Scott Kinnane	 none
 ConvexOS 9.1	convex	bundled cc	1.3.6	Todd Miller	 none
 ConvexOS 9.1	convex	gcc2.4.5	1.3.6	Todd Miller	 none
 BSD/OS	4.1	i386	cc		1.6.3	Todd Miller	 --with-skey
-OpenBSD	2.X	all	gcc-2.95.2	1.6.5	Todd Miller	 none
-OpenBSD	3.0	all	gcc-2.95.3	1.6.5	Todd Miller	 none
+OpenBSD	2.X	all	gcc-2.95.2	1.6.5p1	Todd Miller	 none
+OpenBSD	3.0	all	gcc-2.95.3	1.6.5p1	Todd Miller	 none
 FreeBSD	1.1	i386	gcc		1.3.2	Dworkin Muller	 none
 FreeBSD	2.0.5	i386	gcc		1.3.4	Dworkin Muller	 none
 FreeBSD	3.2	i386	gcc 2.7.2.1	1.6	Brian Jackson	 none
@@ -105,7 +105,7 @@ Linux	2.0.34	i586	egcs-2.91.57	1.5.6p2	Darrin Chandler	 none
 Linux	2.0.36	i586	gcc-2.7.2.3	1.5.7p4	Nathan Haney	 none
 Linux	2.0.33pl1 m68k	gcc 2.7.2.3	1.5.6	James Troup	 none
 Linux	2.2.12	i586	gcc-2.95.2	1.6.3	Todd Miller	 --with-pam
-Linux	2.4.9	i686	gcc-2.96	1.6.5	Todd Miller	 --with-pam
+Linux	2.4.9	i686	gcc-2.96	1.6.5p1	Todd Miller	 --with-pam
 Linux	2.2.13	alpha	egcs-2.91.66	1.6.3	Todd Miller	 --with-pam
 Linux	2.2.6-15 ppc	egcs-1.1.2	1.5.9p4	Barbara Schelkle none
 Linux	2.0.34	mips	gcc-2.7.2	1.6	Tristan Roddis	 none
